Aggiunta tolleranza 0.01 mm per confroniti posizioni da Dicom